--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 formData.append(`files[${index}]`, file); // Ключевая разница - квадратные скобки
             });
 
-            const httpsDomen = 'https://g3p7hk-94-25-68-186.ru.tuna.am';
+            const httpsDomen = 'https://dr8sss-94-25-68-186.ru.tuna.am';
             const api = '/tg1/telegram/webhook/photo';
             const url = httpsDomen + api;
 
