--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <form id="photoForm">
         <!-- Скрытые поля с данными пользователя -->
-        <input type="hidden" id="userId" name="userId" class="hidden-field" />
+        <input type="hidden" id="userId" name="user_id" class="hidden-field" />
         <input
                 type="hidden"
                 id="username"
@@ -580,10 +580,10 @@
             formData.append('title', titleInput.value.trim())
             formData.append('author', authorInput.value.trim())
             formData.append('date', dateInput.value)
-            formData.append('userId', userIdField.value.trim())
+            formData.append('user_id', userIdField.value.trim())
             formData.append('username', usernameField.value.trim())
             formData.append('description', descriptionInput.value.trim())
-            formData.append('initData', JSON.stringify(tg.initData))
+            formData.append('init_data', JSON.stringify(tg.initData))
 
             // Добавляем ВСЕ выбранные файлы
             selectedFiles.forEach((file, index) => {
@@ -601,7 +601,7 @@
             }
 
             const url =
-                'https://mmq4tt-85-172-111-35.ru.tuna.am/tg1/telegram/webhook/photo'
+                'https://wjts0k-62-221-80-217.ru.tuna.am/tg1/telegram/webhook/photo'
 
             log('[REQUEST] Отправляем запрос на:', url)
 
